include/altdss/capi/dss.h

    /*! 
    Positive-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R1(double Value);
    /*! 
    Positive-sequence reactance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X1(double Value);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C0(void);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_C1(void);
    ALTDSS_CAPI_DLL void Lines_Get_Cmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_R0(void);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL double Lines_Get_X0(void);
    /*!
    Reactance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Zero-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C0(double Value);
    /*! 
    Positive-sequence capacitance, nanofarads per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_C1(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Cmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence resistance, ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_R0(double Value);
    /*! 
    Resistance matrix (full), ohms per unit length. Array of doubles.
    */
    ALTDSS_CAPI_DLL void Lines_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Zero-sequence reactance ohms per unit length.
    */
    ALTDSS_CAPI_DLL void Lines_Set_X0(double Value);
    ALTDSS_CAPI_DLL void Lines_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_EmergAmps(void);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL double Lines_Get_NormAmps(void);
    /*! 
    Emergency (maximum) ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_EmergAmps(double Value);
    /*! 
    Normal ampere rating of Line.
    */
    ALTDSS_CAPI_DLL void Lines_Set_NormAmps(double Value);