src/main/CAPI_Lines.pas


end;
//------------------------------------------------------------------------------
procedure Lines_Set_R1(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         R1 := Value;
         SymComponentsChanged := True;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X1(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) DO Begin
         X1 := Value;
         SymComponentsChanged := True;
         YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_C0():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := C0/UnitsConvert * 1.0e9;
  End

end;
//------------------------------------------------------------------------------
function Lines_Get_C1():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := C1/UnitsConvert * 1.0e9;
  End;
  
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Cmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;
   Factor :Double;

begin

  Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         Factor  := TwoPi * BaseFrequency  * 1.0e-9 * UnitsConvert;  // corrected 2.9.2018 RCD
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Yc.GetElement(i,j).im / Factor;
             Inc(k);
          End;
       End;
  End;

end;
//------------------------------------------------------------------------------
function Lines_Get_R0():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := R0/UnitsConvert;
  End;

end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Rmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;

begin
  Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Z.GetElement(i,j).Re/UnitsConvert;
             Inc(k);
          End;
       End;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_X0():Double;cdecl;
begin

  Result := 0.0;

  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN With TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
       Result := X0/UnitsConvert;
  End;
 
end;
//------------------------------------------------------------------------------
PROCEDURE Lines_Get_Xmatrix(var ResultPtr: PDouble; var ResultCount: Integer);cdecl;
VAR
  Result: PDoubleArray;
   i,j, k:Integer;
begin
  Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         Result := DSS_CreateArray_PDouble(ResultPtr, ResultCount, (Sqr(Nphases) - 1) + 1);
         k := 0;
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Result[k] :=  Z.GetElement(i,j).im/UnitsConvert;
             Inc(k);
          End;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C0(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) DO Begin
         C0 := Value * 1.0e-9;
         SymComponentsChanged := True;
         YprimInvalid := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_C1(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) DO Begin
         C1 := Value * 1.0e-9;
         SymComponentsChanged := True;
         YprimInvalid := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Cmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Factor:Double;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         Factor  := TwoPi * BaseFrequency  * 1.0e-9;
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             Yc.SetElement(i,j, Cmplx(0.0, Value[k]*Factor));
             Inc(k);
          End;
         YprimInvalid := True;
       End;
  End;

end;
//------------------------------------------------------------------------------
procedure Lines_Set_R0(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
           R0 := Value;
           SymComponentsChanged := True;
           YprimInvalid := True;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Rmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Ztemp:complex;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx( Value[k], ZTemp.im));
             Inc(k);
          End;
         YprimInvalid := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_X0(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         X0 := Value;
         SymComponentsChanged := True;
         YprimInvalid := True;
       End;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_Xmatrix(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
  Value: PDoubleArray;
   i,j, k:Integer;
   Ztemp:complex;
begin
    Value := PDoubleArray(ValuePtr);
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement)DO Begin
         k := (0);
         FOR i := 1 to NPhases DO
          FOR j := 1 to Nphases DO
          Begin
             ZTemp := Z.GetElement(i,j);
             Z.SetElement(i,j, Cmplx(Ztemp.re, Value[k]));
             Inc(k);
          End;
          YprimInvalid := True;

       End;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_EmergAmps():Double;cdecl;
begin
   Result := 0.0;
   IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).EmergAmps;
  End
 
end;
//------------------------------------------------------------------------------
function Lines_Get_NormAmps():Double;cdecl;
begin
  Result := 0.0;
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).NormAmps;
  End
end;
//------------------------------------------------------------------------------
procedure Lines_Set_EmergAmps(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         EmergAmps := Value;
       END;
  End;
end;
//------------------------------------------------------------------------------
procedure Lines_Set_NormAmps(Value: Double);cdecl;
begin
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       WITH TLineObj(ActiveCircuit.ActiveCktElement) Do Begin
         NormAmps := Value;
       END;
  End;
end;
//------------------------------------------------------------------------------
function Lines_Get_Geometry_AnsiString():AnsiString;inline;
begin
  Result := '';
  IF ActiveCircuit <> NIL
  THEN If IsLine(ActiveCircuit.ActiveCktElement)
  THEN Begin
       Result := TLineObj(ActiveCircuit.ActiveCktElement).GeometryCode;
  End
end;
